# salus

./: .gitignore  .gitmodules  README.md  doctor.cpp  doctor.h  launcherwindow.cpp  main.cpp  salus.pro
design/: index.css  index.html  salus_styleguide.gvdesign  салюс_блоксхема.vsdx
src/: doctor.cpp  doctor.h  launcherwindow.cpp  launcherwindow.h  launcherwindow.ui  main.cpp  main.h  profileregistrationwindow.cpp  profileregistrationwindow.h  profileregistrationwindow.ui  salus.pro
src/salus/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.37c874f  CMakeLists.txt.user.5a9e973  DoctorDiagnosesDataBase.qml  DoctorProfilePage.qml  DoctorProfileRegistrationPage.qml  DoctorTreatmentsDatabase.qml  LoginPage.qml  PatientMedicalCardDiary.qml  PatientMedicalCardMain.qml  PatientMedicalCardPage.qml  PatientMedicalCardRegistrationPage.qml  PatientSearchMedicalCardPage.qml  backend.cpp  backend.h  doctor.cpp  doctor.h  doctordatabase.cpp  doctordatabase.h  login_page.qml  main.cpp  main.qml  patient.h  patientdatabase.cpp  patientdatabase.h  patientdb.cpp  patientdb.h  patientlistmodel.cpp  patientlistmodel.h  qml.qrc  salus.pro
src/salus/backend/: CMakeLists.txt  backend.cpp  backend.h  patientdatabase.h
src/salus/backend/doctor/: CMakeLists.txt  doctor.h  doctordatabase.cpp  doctordatabase.h  glossarydatabase.cpp  glossarydatabase.h
src/salus/backend/patient/: CMakeLists.txt  patient.h  patientcardrecord.h  patientdatabase.cpp  patientdatabase.h  patientlistmodel.cpp  patientlistmodel.h  patientrecordslistmodel.cpp  patientrecordslistmodel.h
src/salus/cards_src/: dentist_043_header.html  page1.html  page2.html  page3.html  page4.html  page5.html  second_page_test.html  third_page.html
src/salus/frontend/: main.qml
src/salus/frontend/doctor/: DoctorDiagnosesDataBase.qml  DoctorGlossaryDatabase.qml  DoctorProfilePage.qml  DoctorProfileRegistrationPage.qml  DoctorTreatmentsDatabase.qml  LoginPage.qml
src/salus/frontend/doctor/components/: GlossaryEditPanel.qml
src/salus/frontend/patient/: PatientAddRecordPage.qml  PatientEditRecordPage.qml  PatientMedicalCardDiary.qml  PatientMedicalCardMain.qml  PatientMedicalCardRegistrationPage.qml  PatientSearchMedicalCardPage.qml
src/salus/frontend/patient/components/: ButtonReturn.qml  GlossaryPasteContextMenu.qml
